--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "COBSR"
+name = "Cobsr"
 authors = ["William Herrera <wherrera@alahonua.com>"]
 uuid = "777baba0-b230-11eb-2c94-7207250cf58f"
 version = "0.1.0"
