--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Cobsr"
+name = "COBSReduced"
 authors = ["William Herrera <wherrera@alahonua.com>"]
 uuid = "719baba0-b808-11eb-2c94-7207250cf58f"
 version = "0.1.0"
